# tnt-openbsd

./: AUTHORS  AX25-NOTES  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs  tnt.spec
conf/: Makefile.am  Makefile.in  isc.cfg  linux.cfg  netbsd.cfg  solaris.cfg  tnt_setup.de.in  tnt_setup.en.in  tnt_setup.fr.in
doc/: Makefile.am  Makefile.in  Readme1.de  Readme1.en  Readme1.fr  Readme2.en  Readme2.fr  Readme3.en  Readme3.fr  Readme4.en  Readme4.fr  Readme5.de  Readme5.en  Readme5.fr  Readme6.de  Readme6.en  Readme6.fr  tnt.doc.de  tnt.doc.en  tnt.doc.fr  tntdoc.dvi  tntdoc.html  tntdoc.info  tntdoc.info-1  tntdoc.info-2  tntdoc.info-3  tntdoc.info-4  tntdoc.texi
doc/solaris/: Makefile.am  Makefile.in
examples/: Makefile.am  Makefile.in  ctext.tnt.fr  pw.tnt  qtext.tnt.fr  sounds.tnt  sounds.tnt.in  tnt.hlp.de  tnt.hlp.en  tnt.hlp.fr  tnt.ini  tnt.ini.in  tntc.ini  tntc.ini.in  tntrem.hlp.fr
examples/sounds/: Makefile.am  Makefile.in
intl/: Makefile.in
po/: ChangeLog  Makefile.in.in  POTFILES.in  cat-id-tbl.c  de.gmo  de.po  fr.gmo  fr.po  tnt.pot
src/: Makefile.am  Makefile.in  ax25dump.c  ax25k.c  bcast.c  bcast.h  bcastadd.c  boxlist.c  boxlist.h  codconv.c  connect.c  cookie.c  crc.c  display.c  file.c  huffman.c  iface.c  iface.h  init.c  init.h  keyboard.c  keys.h  log.c  macro.c  main.c  monbox.c  monbox.h  priv.c  priv.h  remote.c  serial.c  shell.c  shell.h  tnt.h  tntc.c  window.c  xmon.c  yapp.c
src/runprgs/: .help  .info  .logcall  Makefile.am  Makefile.in  help.c  info.c  logcall.c  tntrun.h  tntrun.h.in
