SUBDIRS		= solaris

tnt_doc_dir     = @tnt_doc_dir@
setupdocdir	= ${tnt_doc_dir}
setupdoc_DATA	= Readme1.de Readme2.de Readme3.de Readme4.de Readme5.de Readme6.de \
		  Readme1.en Readme2.en Readme3.en Readme4.en Readme5.en Readme6.en \
		  Readme1.fr Readme2.fr Readme3.fr Readme4.fr Readme5.fr Readme6.fr \
		  ax25krnl.doc iface.doc tnt.doc.de tnt.doc.en tnt.doc.fr \
		  tntdoc.dvi tntdoc.html

infodir		= @infodir@
info_DATA 	= tntdoc.info tntdoc.info-1 tntdoc.info-2 tntdoc.info-3 tntdoc.info-4

EXTRA_DIST	= FILES tntdoc.texi $(setupdoc_DATA) $(info_DATA)

